  
Improvements: 
  
  * New methods are available to produce null matrices, on top of shuffling the
      original matrix (e.g. based on smoothing the original matrix). 
    
  * Significance of Power-law range can now be tested using `indictest()`. 
      Using `plot_distr()` on the resulting objects will display the 0.05/0.95 
      quantiles of null patch size distributions. 
  
  * Improved the fitting of distributions, which should be more robust now. 
  
  * Dependency to VGAM is now removed 
  
Bug fixes: 
  
  * Fixed a bug where the normalization constant for truncated power-laws was 
      miscalculated
  
Removals: 
  
  * All the deprecated `*_spews` functions are now defunct (removed). 
  
  * Most `indicator_*` functions are now deprecated. 
  
Misc changes: 
  
  * Lots of duplicated code has been removed
  
  * Minor changes in print/summary methods
  
  * The FAQ has been expanded and improved. See the following page: 
      https://alex.lecairn.org/spatialwarnings-faq.html
  
spatialwarnings v1.3.1 (Release date: 2018-12)
===============================================

New indicators:
  
  * Planar flowlength (Mayor et al. 2013, Rodriguez et al. 2017)
  
  * Kolmogorov complexity based on Block Decomposition Method
      (Dakos and Soler-Toscano 2016)

Improvements:

  * Enable parallel computation of patch size distributions
  
  * Added a dataset of aerial view of vegetation in Arizona ('arizona')
  
  * Added functions to compute the coarse-grained variance/skewness on a
      single matrix

Bug fixes and code improvements:

  * Added missing methods exports for custom indicators
  
  * Fixed the patch labelling for non-square images
  
  * General code cleanup and improvement

Documentation and description changes:

  * Updated references to reflect the publication of new paper presenting
      the package <doi:10.1111/2041-210X.13058>


spatialwarnings v1.2 (Release date: 2018-06)
===============================================

Bug fixes:
