@@ -32,6 +32,10 @@ S3method(plot,patchdistr_sews_list)
 S3method(plot,simple_sews_list)
 S3method(plot,simple_sews_test)
 S3method(plot,simple_sews_test_list)
+S3method(plot,variogram_sews)
+S3method(plot,variogram_sews_list)
+S3method(plot,variogram_sews_test)
+S3method(plot,variogram_sews_test_list)
 S3method(plot_distr,patchdistr_sews)
 S3method(plot_distr,patchdistr_sews_list)
 S3method(plot_distr,patchdistr_sews_single)
@@ -88,10 +92,6 @@ export(patchdistr_sews)
 export(patchdistr_spews)
 export(patchsizes)
 export(percolation)
-export(plot.variogram_sews)
-export(plot.variogram_sews_list)
-export(plot.variogram_sews_test)
-export(plot.variogram_sews_test_list)
 export(plot_distr)
 export(plot_spectrum)
 export(plot_variogram)
