@@ -96,7 +96,7 @@
 #' data(forestgap)
 #' 
 #' # One logical matrix only
-#' indicator_psdtype(forestgap[1])
+#' indicator_psdtype(forestgap[[1]])
 #' 
 #' # A list of these matrices
 #' \dontrun{ 
