@@ -87,7 +87,7 @@ select the best model using AIC, BIC (default) or AICc.
 data(forestgap)
 
 # One logical matrix only
-indicator_psdtype(forestgap[1])
+indicator_psdtype(forestgap[[1]])
 
 # A list of these matrices
 \dontrun{ 
